--- a/src/css/style.css
+++ b/src/css/style.css
@@ -425,7 +425,13 @@ li .list-item .description {
     height: 100% !important;
 }
 
+.modal.c canvas {
+    width: initial !important;
+    height: initial !important;
+}
+
 .c #piechart {
+    height: auto !important;
     margin-top: 15px;
 }
 /*
@@ -604,6 +610,7 @@ table th {
 }
 
 .cite{
+    font-size: 16px;
     grid-area: f1;
     align-content: end;
     color: #3375F4;
