--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,9 +47,9 @@ section.about .kolom {
   flex: 1; /* Mengisi ruang yang tersedia di sebelah kanan gambar */
 }
 
-.wrapper p {
+/* .wrapper p {
   text-align: justify;
-}
+} */
 
 .timeline {
   display: flex;
@@ -75,14 +75,11 @@ section.garis .timeline::after {
 .timeline-event {
   position: relative;
   margin: 20px 0;
+  width: 100%;
 }
 
 .kolom h2 {
   margin-bottom: 5px;
-}
-
-.transparan {
-  opacity: 0.8;
 }
 
 .timeline-content {
@@ -90,7 +87,7 @@ section.garis .timeline::after {
   padding: 20px;
   border-radius: 8px;
   position: relative;
-  width: 47%;
+  width: 45%;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -196,6 +193,10 @@ section.garis .timeline::after {
 
   .wrapper p {
     font-size: 12px;
+  }
+
+  .wrapper h2 {
+    font-size: 14px;
   }
 }
 
