--- a/src/css/style.css
+++ b/src/css/style.css
@@ -423,7 +423,7 @@ li .list-item .description {
 
 .c canvas {
     width: 100% !important;
-    height: auto !important;
+    height: 100% !important;
 }
 
 .modal.c canvas {
