--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -3,7 +3,7 @@
     max-width: 1005;
     padding: 24px;
     border-radius: 20px;
-    background: #ffffff;
+    background: var(--content-bg-color);
     flex-basis: 100%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
@@ -14,7 +14,7 @@ section#about {
 }
 
 section#about h2 {
-    color: red;
+    color: var(--content-text-color);
     margin-bottom: 0.5em;
     font-weight: 2000;
     text-align: center;
@@ -23,6 +23,7 @@ section#about h2 {
 .desc_about {
     margin-bottom: 0.8em;
     text-align: center;
+    color: var(--analytics-text-color);
 }
 
 .team-grid {
@@ -64,12 +65,14 @@ section#about h2 {
     margin-bottom: auto;
     font-size: 13px;
     text-align: center;
+    color: var(--analytics-text-color);
 }
 
 .team-member .job {
     font-size: 11px;
     font-weight: 600;
     text-align: center;
+    color: var(--analytics-text-color)
 }
 
 /*.central-member {
